hb_task_1a_ws/log/build_2023-10-02_07-11-15/hb_task_1a/stderr.log
  File "/home/yolo/eyrc_hb/hb_task_1a_ws/install/hb_task_1a/lib/python3.10/site-packages/hb_task_1a/task_1a_2836.py", line 15
    def newpose_(self,msg){
                          ^
SyntaxError: expected ':'

